@@ -1,6 +1,7 @@
 0.0101  2023-06-18      Piotr Roszatycki <dexter@cpan.org>
 
-* Requires Thrall 0.0401 and Starlight 0.0501.
+* Thrall server is preferred when threads are enabled.
+* Requires Thrall 0.0402 and Starlight 0.0501.
 * Provides cpanfile.
 * Removed fatpack from the manifest.
 * git.io is not used as it is obsoleted.
